--- a/pom.xml
+++ b/pom.xml
@@ -78,36 +78,18 @@
     </pluginRepository>
   </pluginRepositories>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>1.0</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>enforce</goal>
-            </goals>
-            <phase>validate</phase>
-            <id>ensure-no-plexus-container</id>
-            <configuration>
-              <rules>
-                <bannedDependencies>
-                  <excludes>
-                    <exclude>org.codehaus.plexus:plexus-container-default</exclude>
-                  </excludes>
-                  <message>
-                    ensure-no-plexus-container doesn't work anymore with maven 3 librairies. you have to add some exclusions.
-                  </message>
-                </bannedDependencies>
-              </rules>
-              <fail>true</fail>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+ <build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.8.1</version> <!-- modern version -->
+      <configuration>
+        <source>1.8</source>   <!-- set Java source version -->
+        <target>1.8</target>   <!-- set Java target version -->
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
 
 </project>
