--- a/pom.xml
+++ b/pom.xml
@@ -83,10 +83,10 @@
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-compiler-plugin</artifactId>
-      <version>3.8.1</version> <!-- modern version -->
+      <version>3.8.1</version>
       <configuration>
-        <source>1.8</source>   <!-- set Java source version -->
-        <target>1.8</target>   <!-- set Java target version -->
+        <source>1.8</source>
+        <target>1.8</target>
       </configuration>
     </plugin>
   </plugins>
