--- a/pom.xml
+++ b/pom.xml
@@ -81,14 +81,14 @@
  <build>
   <plugins>
     <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-compiler-plugin</artifactId>
-      <version>2.3.2</version>
-      <configuration>
-        <source>1.5</source>
-        <target>1.5</target>
-      </configuration>
-    </plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.8.1</version> <!-- or any newer stable version -->
+  <configuration>
+    <source>1.8</source>  <!-- or 11, 17 depending on your JDK -->
+    <target>1.8</target>
+  </configuration>
+</plugin>
   </plugins>
 </build>
 
