--- a/pom.xml
+++ b/pom.xml
@@ -2,94 +2,42 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>org.jenkins-ci.tests</groupId>
+    <artifactId>plugins-compat-tester-aggregator</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
+
   <groupId>org.jenkins-ci.tests</groupId>
-  <artifactId>plugins-compat-tester-aggregator</artifactId>
+  <artifactId>plugins-compat-tester-model</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>Plugins compatibility tester Aggregator</name>
-  <description>Hudson/Jenkins Plugin compatibility tester against latest released version</description>
-  <url>https://wiki.jenkins-ci.org/display/JENKINS/Plugin+Compatibility+Tester</url>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
+  <name>Plugins compatibility tester model layer</name>
+  <description>Model layer for Plugins compatibility tester</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <logbackVersion>0.9.28</logbackVersion>
   </properties>
 
-  <modules>
-    <module>plugins-compat-tester</module>
-    <module>plugins-compat-tester-cli</module>
-    <module>plugins-compat-tester-model</module>
-    <!--<module>plugins-compat-tester-rest</module>-->
-    <module>plugins-compat-tester-gae</module>
-    <module>plugins-compat-tester-gae-client</module>
-  </modules>
+  <dependencies>
+    <!-- Add any dependencies needed here -->
+  </dependencies>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.6.1</version>
-      </dependency>
-
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-core</artifactId>
-        <version>${logbackVersion}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>${logbackVersion}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-access</artifactId>
-        <version>${logbackVersion}</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
-  <repositories>
-    <repository>
-      <id>repo.jenkins-ci.org</id>
-      <url>https://repo.jenkins-ci.org/public/</url>
-    </repository>
-    <repository>
-      <id>repo.jenkins-ci.org-snapshots</id>
-      <url>https://repo.jenkins-ci.org/snapshots/</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>repo.jenkins-ci.org</id>
-      <url>https://repo.jenkins-ci.org/public/</url>
-    </pluginRepository>
-  </pluginRepositories>
-
- <build>
-  <plugins>
-    <plugin>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-compiler-plugin</artifactId>
-  <version>3.8.1</version> <!-- or any newer stable version -->
-  <configuration>
-    <source>1.8</source>  <!-- or 11, 17 depending on your JDK -->
-    <target>1.8</target>
-  </configuration>
-</plugin>
-  </plugins>
-</build>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
